# testGdal_Opencv

./: CFileSystem.cpp  CMakeLists.txt  README.md  RSImageData.h  build_run.sh  main.cpp
codes_bak/: CFileSystem.h  CMakeLists.txt  ImageInfo.cpp  ImageInfo.h  RSImage.cpp  RSImage.h  typedefine.h
